# PhantomLightEngine

./: CMakeLists.txt  README.md  index.html
.github/workflows/: build.yml
Engine/: CMakeLists.txt
Engine/Include/: PhantomLightEngine.h
Engine/Include/Core/: Engine.h  PluginSystem.h
Engine/Include/Math/: Matrix.h  Matrix4.h  Quaternion.h  Vector.h
Engine/Include/Physics/: PhysicsSystem.h
Engine/Include/Platform/: Window.h
Engine/Include/Renderer/: RenderSystem.h
Engine/Include/Resource/: ResourceManager.h
Engine/Include/Scene/: Scene.h
Engine/Include/UI/: UIComponents.h  UISystem.h
Engine/Source/: CMakeLists.txt
Engine/Source/Audio/: CMakeLists.txt
Engine/Source/Core/: CMakeLists.txt  Engine.cpp
Engine/Source/Input/: CMakeLists.txt
Engine/Source/Math/: CMakeLists.txt
Engine/Source/Physics/: CMakeLists.txt
Engine/Source/Platform/: CMakeLists.txt
Engine/Source/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Renderer/: CMakeLists.txt
Engine/Source/Resource/: CMakeLists.txt
Engine/Source/Scene/: CMakeLists.txt
Engine/Source/Utils/: CMakeLists.txt
Examples/: CMakeLists.txt
